--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.13.5",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2"
   }
 }
