--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/rss": "^4.0.12",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.13.5",
     "tailwindcss": "^3.4.17",
