--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.12",
-    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.13.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.6.2"
   }
 }
