--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.13.5",
     "tailwindcss": "^4.1.14",
