--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "carlosmmairenav2",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
